<resources>
    <string name="app_name" translatable="false">MindTheGap!</string>
    <string name="settings">Settings</string>
    <string name="tag_btn_answer" translatable="false">0</string>
    <string name="italian">Italian</string>
    <string name="english">English</string>
    <string name="select_files">Select files</string>
    <string name="number">Number</string>
    <string name="set_number">Set number</string>
    <string name="order">Order</string>
    <string name="sequential">Sequential</string>
    <string name="random">Random</string>
    <string name="s_in">%s in</string>
    <string name="edit">Edit</string>
    <string name="file_d" translatable="false">FILE %d</string>
    <string name="done">Done</string>

    <string name="extra_index" translatable="false">cloud.iceproject.mindthegap.INDEX_PASSING</string>

    <string name="pref_lang_questions" translatable="false">cloud.iceproject.mindthegap.QUESTIONS_LANGUAGE_ID</string>
    <string name="pref_lang_answers" translatable="false">cloud.iceproject.mindthegap.ANSWERS_LANGUAGE_ID</string>
</resources>
